Rename broken urls

--- a/webos-desktop/index.html
+++ b/webos-desktop/index.html
@@ -17,9 +17,9 @@
       content="Experience hundreds of games in your browser with Yuki OS. Play Flash, GBA, NDS, HTML5, and more instantly online without downloads."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://reeyuki.github.io/static/seo/preview.webp" />
+    <meta property="og:image" content="https://yukios.netlify.app/static/seo/preview.webp" />
     <meta property="og:site_name" content="Yuki OS" />
-    <meta property="og:url" content="https://reeyuki.github.io/" />
+    <meta property="og:url" content="https://yukios.netlify.app" />
     <meta property="og:locale" content="en_US" />
 
     <meta name="twitter:card" content="summary_large_image" />
@@ -28,10 +28,10 @@
       name="twitter:description"
       content="Yuki OS lets you play hundreds of games directly in your browser. Flash, GBA, NDS, and HTML5 games with no downloads required."
     />
-    <meta name="twitter:image" content="https://reeyuki.github.io/static/seo/preview.webp" />
+    <meta name="twitter:image" content="https://yukios.netlify.app/static/seo/preview.webp" />
 
     <meta name="application-name" content="Yuki OS" />
-    <link rel="canonical" href="https://reeyuki.github.io/" />
+    <link rel="canonical" href="https://yukios.netlify.app/" />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/js/all.min.js"
       integrity="sha512-6BTOlkauINO65nLhXhthZMtepgJSghyimIalb+crKRPhvhmsCdnIuGcVbR5/aQY2A+260iC1OPy1oCdB6pSSwQ=="
@@ -43,7 +43,7 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Yuki OS",
-        "url": "https://reeyuki.github.io/",
+        "url": "https://yukios.netlify.app",
         "description": "Browser-based gaming hub offering Flash, GBA, NDS, and HTML5 games playable instantly online without downloads.",
         "publisher": {
           "@type": "Organization",
@@ -415,7 +415,7 @@
           <span>reeyuki</span>
           <button
             class="start-signout-btn"
-            onclick="window.open('https://github.com/Reeyuki/reeyuki.github.io', '_blank')"
+            onclick="window.open('https://github.com/Reeyuki/YukiOS', '_blank')"
             title="GitHub Repository"
             style="background-color: transparent; color: white; transform: scale(2); border: none"
           >
