--- a/static/emulatorjs.html
+++ b/static/emulatorjs.html
@@ -52,9 +52,9 @@
       window.EJS_pathtodata = "/static/games/cdn.emulatorjs.org/stable/data";
 
       if (rom === "pokemon-white-2.zip") {
-        window.EJS_gameUrl = "https://reeyuki.netlify.app/static/games/pokemon/pokemon-white-2.zip";
+        window.EJS_gameUrl = "https://yukios.netlify.app/static/games/pokemon/pokemon-white-2.zip";
       } else {
-        window.EJS_gameUrl = rom.startsWith("https") ? rom : `https://reeyuki.netlify.app/static/games/pokemon/${rom}`;
+        window.EJS_gameUrl = rom.startsWith("https") ? rom : `https://yukios.netlify.app/static/games/pokemon/${rom}`;
       }
 
       if (core === "gba") {
